--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
     <title>Flask Web App</title>
 </head>
 <body>
-    <h1 id="header1">{{ temps }}</h1>
+    <h1 id="header1">Temps</h1>
 </body>
 
 <script>
     var temperatures = document.getElementById("header1");
-    var tempvalues = temperatures.innerHTML;
-    const tempvalues = [];
-    console.log(tempvalues[]);
+    var tempvalues = {{ temps }}
+    console.log(tempvalues[9]);
+    temperatures.innerHTML = tempvalues[9]
     console.log("testing");
 </script>
 
