--- a/templates/weatherapi.html
+++ b/templates/weatherapi.html
@@ -273,7 +273,7 @@ function convertWMOWeatherCodeToDescription(code) {
 
 async function updateWeather() {
     try {
-        const data = {{ info|tojson|safe }};
+        const data = {{ info|tojson|safe }}
         console.log("worked")
         const temperatureElement = document.getElementById('temperature');
         const humidityElement = document.getElementById('humidity');
@@ -289,7 +289,8 @@ async function updateWeather() {
         const currentTime = new Date();
         timeElement.textContent = currentTime.toLocaleTimeString();
         dayElement.textContent = currentTime.toLocaleDateString();
-    } catch (error) {
+    } 
+    catch (error) {
         console.error('Error fetching weather data:', error);
     }
 }
