--- a/templates/weathertesting.html
+++ b/templates/weathertesting.html
@@ -399,99 +399,99 @@ ul.navbar li a:hover {
     <h1 id="title"></h1>
 </div>
 <div class="transparent-box1">
-    <p><strong id="day1"></strong> <span id="day1data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour1"></strong> <span id="hour1data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box2">
-    <p><strong id="day2"></strong> <span id="day2data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour2"></strong> <span id="hour2data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box3">
-    <p><strong id="day3"></strong> <span id="day3data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour3"></strong> <span id="hour3data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box4">
-    <p><strong id="day4"></strong> <span id="day4data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour4"></strong> <span id="hour4data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box5">
-    <p><strong id="day5"></strong> <span id="day5data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour5"></strong> <span id="hour5data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box6">
-    <p><strong id="day6"></strong> <span id="day6data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour6"></strong> <span id="hour6data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box7">
-    <p><strong id="day7"></strong> <span id="day7data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour7"></strong> <span id="hour7data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box8">
-    <p><strong id="day1"></strong> <span id="day8data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour1"></strong> <span id="hour8data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box9">
-    <p><strong id="day2"></strong> <span id="day9data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour2"></strong> <span id="hour9data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
-<div class="transparent-box1-">
-    <p><strong id="day3"></strong> <span id="day10data">{{ info.current.temperature_2m }}</span></p>
+<div class="transparent-box10">
+    <p><strong id="hour3"></strong> <span id="hour10data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box11">
-    <p><strong id="day4"></strong> <span id="day11data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour4"></strong> <span id="hour11data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box12">
-    <p><strong id="day5"></strong> <span id="day12data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour5"></strong> <span id="hour12data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box13">
-    <p><strong id="day6"></strong> <span id="day13data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour6"></strong> <span id="hour13data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box14">
-    <p><strong id="day7"></strong> <span id="day14data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour7"></strong> <span id="hour14data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box15">
-    <p><strong id="day1"></strong> <span id="day15data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour1"></strong> <span id="hour15data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box16">
-    <p><strong id="day2"></strong> <span id="day16data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour2"></strong> <span id="hour16data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box17">
-    <p><strong id="day3"></strong> <span id="day17data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour3"></strong> <span id="hour17data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box18">
-    <p><strong id="day4"></strong> <span id="day18data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour4"></strong> <span id="hour18data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box19">
-    <p><strong id="day5"></strong> <span id="day19data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour5"></strong> <span id="hour19data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box20">
-    <p><strong id="day6"></strong> <span id="day20data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour6"></strong> <span id="hour20data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box21">
-    <p><strong id="day7"></strong> <span id="day21data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour7"></strong> <span id="hour21data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box22">
-    <p><strong id="day1"></strong> <span id="day22data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour1"></strong> <span id="hour22data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 <div class="transparent-box23">
-    <p><strong id="day2"></strong> <span id="day23data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour2"></strong> <span id="hour23data">{{ info.current.relativehumidity_2m }}</span></p>
 </div>
 
 <div class="transparent-box24">
-    <p><strong id="day3"></strong> <span id="hour24data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour3"></strong> <span id="hour24data">{{ info.current.temperature_2m }}</span></p>
 </div>
 
 
