--- a/templates/weathertesting.html
+++ b/templates/weathertesting.html
@@ -39,9 +39,18 @@ body {
 
 .title {
   position: fixed;
-  top: 25%;
+  top: 14%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 40px;
+}
+
+.weathercode {
+    position: fixed;
+    top: 24%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
 }
 
 .contain {
@@ -54,7 +63,7 @@ body {
 /* Styles for the transparent gray box */
 .transparent-box1 {
     position: fixed;
-    top: 50%;
+    top: 40%;
     left: 20%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -65,8 +74,8 @@ body {
 
 .transparent-box2 {
     position: fixed;
-    top: 50%;
-    left: 30%;
+    top: 40%;
+    left: 25.45454545%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -76,8 +85,8 @@ body {
 
 .transparent-box3 {
     position: fixed;
-    top: 50%;
-    left: 40%;
+    top: 40%;
+    left: 30.909090909%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -87,8 +96,8 @@ body {
 
 .transparent-box4 {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 40%;
+    left: 36.363636363%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -98,8 +107,8 @@ body {
 
 .transparent-box5 {
     position: fixed;
-    top: 50%;
-    left: 60%;
+    top: 40%;
+    left: 41.81818181%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -109,8 +118,8 @@ body {
 
 .transparent-box6 {
     position: fixed;
-    top: 50%;
-    left: 70%;
+    top: 40%;
+    left: 47.27272727%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -120,8 +129,8 @@ body {
 
 .transparent-box7 {
     position: fixed;
-    top: 50%;
-    left: 80%;
+    top: 40%;
+    left: 52.72727272%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -131,8 +140,8 @@ body {
 
 .transparent-box8 {
     position: fixed;
-    top: 50%;
-    left: 20%;
+    top: 40%;
+    left: 58.18181818%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -142,8 +151,8 @@ body {
 
 .transparent-box9 {
     position: fixed;
-    top: 50%;
-    left: 30%;
+    top: 40%;
+    left: 63.63636363%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -153,8 +162,8 @@ body {
 
 .transparent-box10 {
     position: fixed;
-    top: 50%;
-    left: 40%;
+    top: 40%;
+    left: 69.09090909%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -164,8 +173,8 @@ body {
 
 .transparent-box11 {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 40%;
+    left: 74.54545454%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -175,8 +184,8 @@ body {
 
 .transparent-box12 {
     position: fixed;
-    top: 50%;
-    left: 60%;
+    top: 40%;
+    left: 80%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -186,8 +195,8 @@ body {
 
 .transparent-box13 {
     position: fixed;
-    top: 50%;
-    left: 70%;
+    top: 60%;
+    left: 20%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -197,8 +206,8 @@ body {
 
 .transparent-box14 {
     position: fixed;
-    top: 50%;
-    left: 80%;
+    top: 60%;
+    left: 25.45454545%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -208,8 +217,8 @@ body {
 
 .transparent-box15 {
     position: fixed;
-    top: 50%;
-    left: 20%;
+    top: 60%;
+    left: 30.90909090%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -219,8 +228,8 @@ body {
 
 .transparent-box16 {
     position: fixed;
-    top: 50%;
-    left: 30%;
+    top: 60%;
+    left: 36.36363636%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -230,8 +239,8 @@ body {
 
 .transparent-box17 {
     position: fixed;
-    top: 50%;
-    left: 40%;
+    top: 60%;
+    left: 41.81818181%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -241,8 +250,8 @@ body {
 
 .transparent-box18 {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 60%;
+    left: 47.27272727%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -252,8 +261,8 @@ body {
 
 .transparent-box19 {
     position: fixed;
-    top: 50%;
-    left: 60%;
+    top: 60%;
+    left: 52.72727272%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -263,8 +272,8 @@ body {
 
 .transparent-box20 {
     position: fixed;
-    top: 50%;
-    left: 70%;
+    top: 60%;
+    left: 58.18181818%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -274,8 +283,8 @@ body {
 
 .transparent-box21 {
     position: fixed;
-    top: 50%;
-    left: 80%;
+    top: 60%;
+    left: 63.63636363%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -285,8 +294,8 @@ body {
 
 .transparent-box22 {
     position: fixed;
-    top: 50%;
-    left: 20%;
+    top: 60%;
+    left: 69.09090909%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -296,8 +305,8 @@ body {
 
 .transparent-box23 {
     position: fixed;
-    top: 50%;
-    left: 30%;
+    top: 60%;
+    left: 74.54545454%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -307,8 +316,8 @@ body {
 
 .transparent-box24 {
     position: fixed;
-    top: 50%;
-    left: 40%;
+    top: 60%;
+    left: 80%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
     padding: 20px;
@@ -395,109 +404,109 @@ ul.navbar li a:hover {
 <div class="contain">
     <h1 class="big" id="city"></h1>
 </div>
+
 <div class="title">
-    <h1 id="title"></h1>
+    <h1 id="title">San Diego Weather</h1>
 </div>
+
+<div class="weathercode">
+    <h1 id="weathercodeid"></h1>
+</div>
+
 <div class="transparent-box1">
-    <p><strong id="hour1"></strong> <span id="hour1data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour1">12 AM</strong><br><br><span id="hour1data">{{ info.hourly.temperature_2m[0] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[0] }}%</span></p>
 </div>
 
 <div class="transparent-box2">
-    <p><strong id="hour2"></strong> <span id="hour2data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour2">1 AM</strong><br><br><span id="hour2data">{{ info.hourly.temperature_2m[1] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[1] }}%</span></p>
 </div>
 
 <div class="transparent-box3">
-    <p><strong id="hour3"></strong> <span id="hour3data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour3">2 AM</strong><br><br><span id="hour3data">{{ info.hourly.temperature_2m[2] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[2] }}%</span></p>
 </div>
 
 <div class="transparent-box4">
-    <p><strong id="hour4"></strong> <span id="hour4data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour4">3 AM</strong><br><br><span id="hour4data">{{ info.hourly.temperature_2m[3] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[3] }}%</span></p>
 </div>
 
 <div class="transparent-box5">
-    <p><strong id="hour5"></strong> <span id="hour5data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour5">4 AM</strong><br><br><span id="hour5data">{{ info.hourly.temperature_2m[4] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[4] }}%</span></p>
 </div>
 
 <div class="transparent-box6">
-    <p><strong id="hour6"></strong> <span id="hour6data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour6">5 AM</strong><br><br><span id="hour6data">{{ info.hourly.temperature_2m[5] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[5] }}%</span></p>
 </div>
 
 <div class="transparent-box7">
-    <p><strong id="hour7"></strong> <span id="hour7data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour7">6 AM</strong><br><br><span id="hour7data">{{ info.hourly.temperature_2m[6] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[6] }}%</span></p>
 </div>
 
 <div class="transparent-box8">
-    <p><strong id="hour1"></strong> <span id="hour8data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour1">7 AM</strong><br><br><span id="hour8data">{{ info.hourly.temperature_2m[7] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[7] }}%</span></p>
 </div>
 
 <div class="transparent-box9">
-    <p><strong id="hour2"></strong> <span id="hour9data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour2">8 AM</strong><br><br><span id="hour9data">{{ info.hourly.temperature_2m[8] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[8] }}%</span></p>
 </div>
 
 <div class="transparent-box10">
-    <p><strong id="hour3"></strong> <span id="hour10data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour3">9 AM</strong><br><br><span id="hour10data">{{ info.hourly.temperature_2m[9] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[9] }}%</span></p>
 </div>
 
 <div class="transparent-box11">
-    <p><strong id="hour4"></strong> <span id="hour11data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour4">10 AM</strong><br><br><span id="hour11data">{{ info.hourly.temperature_2m[10] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[10] }}%</span></p>
 </div>
 
 <div class="transparent-box12">
-    <p><strong id="hour5"></strong> <span id="hour12data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour5">11 AM</strong><br><br><span id="hour12data">{{ info.hourly.temperature_2m[11] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[11] }}%</span></p>
 </div>
 
 <div class="transparent-box13">
-    <p><strong id="hour6"></strong> <span id="hour13data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour6">12 PM</strong><br><br><span id="hour13data">{{ info.hourly.temperature_2m[12] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[12] }}%</span></p>
 </div>
 
 <div class="transparent-box14">
-    <p><strong id="hour7"></strong> <span id="hour14data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour7">1 PM</strong><br><br><span id="hour14data">{{ info.hourly.temperature_2m[13] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[13] }}%</span></p>
 </div>
 
 <div class="transparent-box15">
-    <p><strong id="hour1"></strong> <span id="hour15data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour1">2 PM</strong><br><br><span id="hour15data">{{ info.hourly.temperature_2m[14] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[14] }}%</span></p>
 </div>
 
 <div class="transparent-box16">
-    <p><strong id="hour2"></strong> <span id="hour16data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour2">3 PM</strong><br><br><span id="hour16data">{{ info.hourly.temperature_2m[15] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[15] }}%</span></p>
 </div>
 
 <div class="transparent-box17">
-    <p><strong id="hour3"></strong> <span id="hour17data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour3">4 PM</strong><br><br><span id="hour17data">{{ info.hourly.temperature_2m[16] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[16] }}%</span></p>
 </div>
 
 <div class="transparent-box18">
-    <p><strong id="hour4"></strong> <span id="hour18data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour4">5 PM</strong><br><br><span id="hour18data">{{ info.hourly.temperature_2m[17] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[17] }}%</span></p>
 </div>
 
 <div class="transparent-box19">
-    <p><strong id="hour5"></strong> <span id="hour19data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour5">6 PM</strong><br><br><span id="hour19data">{{ info.hourly.temperature_2m[18] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[18] }}%</span></p>
 </div>
 
 <div class="transparent-box20">
-    <p><strong id="hour6"></strong> <span id="hour20data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour6">7 PM</strong><br><br><span id="hour20data">{{ info.hourly.temperature_2m[19] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[19] }}%</span></p>
 </div>
 
 <div class="transparent-box21">
-    <p><strong id="hour7"></strong> <span id="hour21data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour7">8 PM</strong><br><br><span id="hour21data">{{ info.hourly.temperature_2m[20] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[20] }}%</span></p>
 </div>
 
 <div class="transparent-box22">
-    <p><strong id="hour1"></strong> <span id="hour22data">{{ info.current.temperature_2m }}</span></p>
+    <p><strong id="hour1">9 PM</strong><br><br><span id="hour22data">{{ info.hourly.temperature_2m[21] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[21] }}%</span></p>
 </div>
 
 <div class="transparent-box23">
-    <p><strong id="hour2"></strong> <span id="hour23data">{{ info.current.relativehumidity_2m }}</span></p>
+    <p><strong id="hour2">10 PM</strong><br><br><span id="hour23data">{{ info.hourly.temperature_2m[22] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[22] }}%</span></p>
 </div>
 
 <div class="transparent-box24">
-    <p><strong id="hour3"></strong> <span id="hour24data">{{ info.current.temperature_2m }}</span></p>
-</div>
-
-
-<div class="transparent-box3">
-    <p><strong>Time:</strong> <span id="time"></span></p>
-    <p><strong>Day:</strong> <span id="day"></span></p>
+    <p><strong id="hour3">11 PM</strong><br><br><span id="hour24data">{{ info.hourly.temperature_2m[23] }} °C</span><br><span>{{ info.hourly.relativehumidity_2m[23] }}%</span></p>
 </div>
 
 <script>
@@ -552,18 +561,8 @@ function convertWMOWeatherCodeToDescription(code) {
 async function updateWeather() {
     try {
         const data = {{ info|tojson|safe }}
-        console.log("worked")
-        const temperatureElement = document.getElementById('temperature');
-        const humidityElement = document.getElementById('humidity');
-        const timeElement = document.getElementById('time');
-        const dayElement = document.getElementById('day');
-        const weathertypeElement = document.getElementById('title');
-
-        temperatureElement.textContent = data.current.temperature_2m;
-        humidityElement.textContent = data.current.relativehumidity_2m;
-        var weathercode = data.current.weathercode;
-        weathertypeElement.textContent = convertWMOWeatherCodeToDescription(weathercode);
-
+        weathertypeElement = document.getElementById("weathercodeid")
+        weathertypeElement.textContent = convertWMOWeatherCodeToDescription(data.hourly.weathercode[1]);
         const currentTime = new Date();
         timeElement.textContent = currentTime.toLocaleTimeString();
         dayElement.textContent = currentTime.toLocaleDateString();
