images + api changes

--- a/templates/weathertesting.html
+++ b/templates/weathertesting.html
@@ -41,6 +41,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 40px;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .weathercode {
@@ -49,6 +51,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 30px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .contain {
@@ -61,7 +65,7 @@ body {
 /* Styles for the transparent gray box */
 .transparent-box1 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 20%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -72,7 +76,7 @@ body {
 
 .transparent-box2 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 25.45454545%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -83,7 +87,7 @@ body {
 
 .transparent-box3 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 30.909090909%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -94,7 +98,7 @@ body {
 
 .transparent-box4 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 36.363636363%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -105,7 +109,7 @@ body {
 
 .transparent-box5 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 41.81818181%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -116,7 +120,7 @@ body {
 
 .transparent-box6 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 47.27272727%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -127,7 +131,7 @@ body {
 
 .transparent-box7 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 52.72727272%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -138,7 +142,7 @@ body {
 
 .transparent-box8 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 58.18181818%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -149,7 +153,7 @@ body {
 
 .transparent-box9 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 63.63636363%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -160,7 +164,7 @@ body {
 
 .transparent-box10 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 69.09090909%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -171,7 +175,7 @@ body {
 
 .transparent-box11 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 74.54545454%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -182,7 +186,7 @@ body {
 
 .transparent-box12 {
     position: fixed;
-    top: 40%;
+    top: 60%;
     left: 80%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -193,7 +197,7 @@ body {
 
 .transparent-box13 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 20%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -204,7 +208,7 @@ body {
 
 .transparent-box14 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 25.45454545%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -215,7 +219,7 @@ body {
 
 .transparent-box15 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 30.90909090%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -226,7 +230,7 @@ body {
 
 .transparent-box16 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 36.36363636%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -237,7 +241,7 @@ body {
 
 .transparent-box17 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 41.81818181%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -248,7 +252,7 @@ body {
 
 .transparent-box18 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 47.27272727%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -259,7 +263,7 @@ body {
 
 .transparent-box19 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 52.72727272%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -270,7 +274,7 @@ body {
 
 .transparent-box20 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 58.18181818%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -281,7 +285,7 @@ body {
 
 .transparent-box21 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 63.63636363%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -292,7 +296,7 @@ body {
 
 .transparent-box22 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 69.09090909%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -303,7 +307,7 @@ body {
 
 .transparent-box23 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 74.54545454%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -314,7 +318,7 @@ body {
 
 .transparent-box24 {
     position: fixed;
-    top: 60%;
+    top: 80%;
     left: 80%;
     transform: translate(-50%, -50%);
     background-color: rgba(128, 128, 128, 0.5); /* Transparent gray color */
@@ -387,6 +391,26 @@ ul.navbar li a:hover {
     transform: translate(-50%, -50%);
 }
 
+.date {
+    position: fixed;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.time {
+    position: fixed;
+    top: 42%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 </style>
 </head>
 
@@ -409,6 +433,14 @@ ul.navbar li a:hover {
 
 <div class="weathercode">
     <h1 id="weathercodeid"></h1>
+</div>
+
+<div class="date">
+    <h1 id="dateinner">Date: </h1>
+</div>
+
+<div class="time">
+    <h1 id="timeinner">Time: </h1>
 </div>
 
 <div class="transparent-box1">
@@ -559,11 +591,17 @@ function convertWMOWeatherCodeToDescription(code) {
 async function updateWeather() {
     try {
         const data = {{ info|tojson|safe }}
-        weathertypeElement = document.getElementById("weathercodeid")
-        weathertypeElement.textContent = convertWMOWeatherCodeToDescription(data.hourly.weathercode[1]);
         const currentTime = new Date();
+        timeElement = document.getElementById("timeinner")
+        dayElement = document.getElementById("dateinner")
+        timenow = currentTime.toLocaleTimeString()
         timeElement.textContent = currentTime.toLocaleTimeString();
+        hour = timenow[0] - 1
         dayElement.textContent = currentTime.toLocaleDateString();
+
+        weathertypeElement = document.getElementById("weathercodeid")
+        weathertypeElement.textContent = convertWMOWeatherCodeToDescription(data.hourly.weathercode[hour]);
+        
     } 
     catch (error) {
         console.error('Error fetching weather data:', error);
